update home page for end of 2023 season

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,8 @@ home page #} {% block header -%}{% endblock -%} {% block main -%} {{ super() }}
     working groups.
   </h4>
 
+  <h4>We are the perfect venue for small team offsites, startup retreats, and hackathons</h4>
+
   <h4>We are located in Malone, NY just north of Adirondack Park.</h4>
 </section>
 
@@ -81,7 +83,7 @@ home page #} {% block header -%}{% endblock -%} {% block main -%} {{ super() }}
   <p>Bring your team to FRC to kick off an ambitious new project or creatively explore possible future directions.</p>.
   <h2>Startup Retreats</h2>
   <p>Nothing will accellerate your startup faster than an intensive incubation/hackathon retreat. Bring the team together under one roof for in-person collaboration and high-bandwidth interactions.</p>.
-  <h2>Residencies</h2>
+  <h2>Individual Residencies</h2>
 
   <p>Need some time to do a batch of deep work on your project? Feeling burnt out and want to do some unstructured creative work? Feeling stuck in a rut and need a change of scene and pace? A residency at FRC may be just what you need!
   </p>
@@ -94,10 +96,9 @@ home page #} {% block header -%}{% endblock -%} {% block main -%} {{ super() }}
     <a href="mailto:team@focusretreatcenter.com?subject=Residency+Inquiry">team@focusretreatcenter.com</a>
     and we can help you plan an amazing event.
   </p>
-  <h2>2023 Retreat Programs</h2>
+  <h2>2024 Retreat Programs</h2>
+  <p>Our 2024 season is currently being planned. This page will be updated as events are announced.</p>
   <ul class="programs">
-    <li><a href="/2023/underdog-devs/">Underdog Devs Retreat</a></li>
-    <li><a href="/2023/inktober/">Inktober2023 Retreats</a></li>
   </ul>
 
 </section>
@@ -251,17 +252,17 @@ home page #} {% block header -%}{% endblock -%} {% block main -%} {{ super() }}
     alt="Stunning view of the mountains, forest, and lakes from Azure Mountain">
   <img src="crumb-cake.jpg" alt="Home made crumb cake fresh from the oven">
   <img
-    src="inktober-common-room.jpg"
+    src="photos/retreats-2023/53270328101_ca36a591c8_o.jpg"
     alt="Guests working on Inktober illustrations together">
   <img
-    src="denise-dining.jpg"
-    alt="Guests conduct a social media workshop in the dining room">
+    src="photos/retreats-2023/53266493494_7ab907e05e_o.jpg"
+    alt="Guests enjoying dinner on Taco Tuesday">
   <img
     src="photos/retreats-2022/pad-thai-prep.jpg"
     alt="Ingredients prepped for pad thai night">
   <img
-    src="photos/retreats-2022/programming-usie.jpg"
-    alt="Creative Coding Retreat guests">
+    src="photos/retreats-2023/53267357372_c8c55821da_o.jpg"
+    alt="A lovely autumn hike to High Falls">
   <img src="cinnamon-rolls.jpg" alt="Home made cinnamon rolls">
   <img src="megan-laugh.jpg" alt="Guest laughs while sketching on a hike">
   <img
@@ -271,6 +272,12 @@ home page #} {% block header -%}{% endblock -%} {% block main -%} {{ super() }}
   <img
     src="hike-boulder-autumn.jpg"
     alt="Climbing around some boulders on an autumn hike">
+  <img
+    src="photos/retreats-2023/53048390516_dd7d59ceb6_o.jpg"
+    alt="Kayaking on tranquil Moose Pond">
+  <img
+    src="photos/retreats-2023/group-selfie-6415.jpg"
+    alt="Inktober selfie">
 </section>
 
 <section class="centered-column bg-honey">
