add coworking page

--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -5,6 +5,7 @@
 <a href="/#program">The Program</a>
 <a href="/travel">Getting to FRC</a>
 <a href="/photos">Photos</a>
+<a href="/coworking">Coworking</a>
 <a href="/team">Team</a>
 <a href="/blog">Blog</a>
 <a href="/signin">Sign In</a>
