add meeting room rental page

--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -6,6 +6,7 @@
 <a href="/travel">Getting to FRC</a>
 <a href="/photos">Photos</a>
 <a href="/coworking">Coworking</a>
+<a href="/meeting-rooms">Meeting Room Rentals</a>
 <a href="/team">Team</a>
 <a href="/blog">Blog</a>
 <a href="/signin">Sign In</a>
