--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -7,6 +7,7 @@
 <a href="/photos">Photos</a>
 <a href="/coworking">Coworking</a>
 <a href="/meeting-rooms">Meeting Room Rentals</a>
+<a href="/catering">Catering</a>
 <a href="/team">Team</a>
 <a href="/blog">Blog</a>
 <a href="/signin">Sign In</a>
