remove mailchimp and phone

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,12 @@ home page #} {% block header -%}{% endblock -%} {% block main -%} {{ super() }}
   <h2>Inspire. Create. Collaborate.</h2>
 </section>
 
+<section class="centered-column imagine">
+  <h2>
+    Focus Retreat Center is now closed. Read more in this <a href="/blog/best-wishes-from-focus-retreat-center/">blog post.</a>.
+  </h2>
+</section>
+
 <section class="centered-column bg-dark-blue callout-text" id="intro">
   <h3>
     Creativity flourishes at Focus Retreat Center. With support and inspiration
@@ -273,30 +279,6 @@ home page #} {% block header -%}{% endblock -%} {% block main -%} {{ super() }}
   <img
     src="photos/retreats-2023/group-selfie-6415.jpg"
     alt="Inktober selfie">
-</section>
-
-<section class="centered-column bg-honey">
-  {% include "mailchimp.html" %}
-</section>
-
-<section class="centered-column bg-light-blue">
-  <h2>More Info</h2>
-  <a class="phone" href="tel:+15183108879">518-310-8879</a>
-  <a
-    class="brand-button"
-    href="mailto:team@focusretreatcenter.com?subject=Website+Retreat+Inquiry"
-    >Contact us for more info</a
-  >
-</section>
-
-<section class="centered-column bg-dark-blue" id="signin">
-  <h2>Need to...?</h2>
-  <ul>
-    <li>Make a payment</li>
-    <li>Set up automatic payments</li>
-    <li>Update your profile</li>
-  </ul>
-  <a class="brand-button" href="/signin">Sign In</a>
 </section>
 
 <section class="bg-img-sunset"></section>
